--- a/css/pres.css
+++ b/css/pres.css
@@ -1,3 +1,28 @@
 .reveal .slides section .fragment.highlight-current-green.current-fragment {
-    background-color: #103b82;
+    width: 100%;
+    background-color: #00362b;
+}
+
+.map {
+    width: 960px;
+    height: 480px;
+}
+
+.leaflet-fade-anim .leaflet-tile, .leaflet-fade-anim .leaflet-popup {
+    -webkit-transition: opacity 0.2s linear !important;
+    -moz-transition: opacity 0.2s linear !important;
+    -o-transition: opacity 0.2s linear !important;
+    transition: opacity 0.2s linear !important;
+}
+
+.reveal .leaflet-container {
+    font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif !important;
+}
+
+.reveal .leaflet-container img {
+    margin: 0;
+    background: none;
+    border: none;
+    box-shadow: none;
+    max-height: inherit;
 }
